--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000000" />
-    <link rel="preload" href="static/media/roboto-regular.91f689ac.woff2" as="font" type="font/woff2" crossorigin="anonymous"
-    />
+    <link rel="preload" href="static/media/roboto-regular.91f689ac.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
     <title>Liga Bank</title>
   </head>
   <body>
